--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,8 @@
 name: CI/CD Pipeline
 
-on: [push]
+on: 
+  push:
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -24,4 +26,3 @@ jobs:
 
     - name: Run Ansible Playbook
       run: ansible-playbook -i inventory.ini nginx.yml
-
